# geoetl

./: .env.example  .gitignore  CLAUDE.md  GEOTILER_API_TEST_REPORT.md  H3.md  gdal-plugins_3.11.4+dfsg-1~noble0_amd64.deb  pyproject.toml
docs/: mapspam-h3-aggregation-methodology.md  overture_catalog.md  pipeline_runs.md
docs/agent_pipelines/: AGENT_METRICS.md  ARB.md  COMPETE.md  GREENFIELD.md  REFLEXION.md
docs/agent_reviews/: COMPETE_full_library.md  COMPETE_h3_duckdb.md  COMPETE_overture.md
geoetl/: __init__.py  config.py  exceptions.py
geoetl/batch/: __init__.py  pool.py  raster_ops.py  vector_ops.py
geoetl/duckdb/: engine.py
geoetl/h3/: __init__.py  aggregation.py  grid.py  rollup.py  spatial_join.py
geoetl/overture/: __init__.py  aggregation.py  client.py  config.py  extract.py
geoetl/pipeline/: __init__.py  checkpoint.py  progress.py  runner.py  types.py
geoetl/raster/: __init__.py  _utils.py  cog.py  mosaic.py  stac.py  tiling.py  types.py  validation.py  zonal.py
geoetl/storage/: __init__.py  manager.py
geoetl/vantor/: __init__.py  cloud_check.py  config.py  discovery.py
geoetl/vector/: __init__.py  converters.py  helpers.py  types.py  validation.py
scripts/: aggregate_mapspam.py  aggregate_overture.py  road_pipeline.py
tests/: conftest.py  test_config.py  test_storage.py
