[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "geoetl"
version = "0.1.0"
description = "Local geospatial ETL pipeline for raster and vector data"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
dependencies = [
    "rasterio>=1.3.9",
    "rio-cogeo>=5.3.0",
    "rio-stac>=0.9.0",
    "cogeo-mosaic>=7.1.0",
    "pystac>=1.10.0",
    "geopandas>=0.14.0",
    "shapely>=2.0.0",
    "fiona>=1.9.0",
    "pyproj>=3.6.0",
    "numpy>=1.24.4",
    "pandas>=2.0.0",
    "pyarrow>=14.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "tqdm>=4.66.0",
    "lxml>=4.9.0",
    "click>=8.1.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "h3>=4.0.0",
    "xarray>=2023.1.0",
    "netCDF4>=1.6.0",
    "duckdb>=1.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.3.0",
]
sam2 = [
    "torch>=2.5.1",
    "torchvision>=0.20.1",
    "pillow>=9.4.0",
    "SAM-2>=1.0",
]

[tool.setuptools.packages.find]
include = ["geoetl*"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
